<resources>
    <string name="app_name">Overmind</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_about">About</string>
    
    <string name="title_activity_main">Overmind</string>
    <string name="reading_minds">Reading people\'s minds</string>
    <string name="data_analice">Data Analysis</string>
    <string name="levels">Wave mental levels</string>
    <string name="play">Play</string>
    <string name="bluetooth_disconnect">Bluetooth disconnect</string>
    
    <string name="device_not_assigned">Empty</string>
</resources>