<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dip"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="43dp" />

    <LinearLayout
        android:id="@+id/buttomBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.50"
            
            android:orientation="vertical"
            android:layout_gravity="center"
             >

            <Button
                android:id="@+id/btnGrafica_1"
                style="@style/button_black"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:text="@string/data_analice"
                            android:layout_gravity="center"
                 />

            <Button
                android:id="@+id/btnGrafica_2"
                style="@style/button_black"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:text="@string/levels" 
                            android:layout_gravity="center"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnGame"
            style="@style/button_black"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dip"
            android:text="@string/play" 
             android:layout_weight="0.50"/>
    </LinearLayout>
    
    <LinearLayout 
    android:id="@+id/linearLayout4"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_below="@+id/buttomBox"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" 
    android:gravity="bottom"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="20dp">

        <ScrollView
            android:id="@+id/ScrollView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scrollbars="horizontal" >

            <HorizontalScrollView
                android:id="@+id/HorizontalScrollView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/LinearLayout02"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/device0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/bluetooth_enable"
                        android:text="@string/device_not_assigned"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/device1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/bluetooth_enable"
                        android:text="@string/device_not_assigned"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/device2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/bluetooth_enable"
                        android:text="@string/device_not_assigned"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/device3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/bluetooth_enable"
                        android:text="@string/device_not_assigned"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/device4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/bluetooth_enable"
                        android:text="@string/device_not_assigned"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/device5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/bluetooth_enable"
                        android:text="@string/device_not_assigned"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/device6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/bluetooth_enable"
                        android:text="@string/device_not_assigned"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/device7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:drawableTop="@drawable/bluetooth_enable"
                        android:text="@string/device_not_assigned"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </HorizontalScrollView>
        </ScrollView>

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/bluetooth_disconnect"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            />
 </LinearLayout>
        
</LinearLayout>